fixed intellisense word wrap

--- a/src/plugins/intellisense/view.less
+++ b/src/plugins/intellisense/view.less
@@ -7,6 +7,7 @@
   padding: 5px;
   border: 1px solid #bbbbbb;
   max-height: 35vh;
+  max-width: 35vw;
   overflow: auto;
 }
 
@@ -69,4 +70,8 @@ span[data-is-comma="true"]::after {
 }
 tr:hover .jump-to-def-btn {
   opacity: 1;
+}
+
+.dsm-intellisense-docstring {
+  white-space: pre-line;
 }
